tests/ui/parser/issues/issue-2354-1.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-2354-1.rs:1:24
   |
LL | static foo: isize = 2; }
   |                        ^ unexpected closing delimiter

error: aborting due to 1 previous error

