tests/ui/parser/issues/issue-2354-1.rs
static foo: isize = 2; } //~ ERROR unexpected closing delimiter:
